--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"author": "Ryan Lavery",
 	"license": "MIT",
 	"dependencies": {
+		"colors": "^1.4.0",
 		"express": "^4.19.2",
 		"mongodb": "^6.8.0",
 		"mongoose": "^8.5.1"
